--- a/mysite/templates/form2.html
+++ b/mysite/templates/form2.html
@@ -1,61 +1,243 @@
 <html>
 <head>
   <title>Resume Parser</title>
-  <link type="text/css" rel="stylesheet" href="style.css">
+  <style>
+/* Style inputs, select elements and textareas */
+input[type=text], select, textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+  }
+  
+  /* Style the label to display next to the inputs */
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+  }
+  
+  /* Style the submit button */
+  input[type=submit] {
+    background-color: #1d90e8;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .submitb {
+    display: flex;  
+    justify-content: center;  
+    align-items: center;  
+  }
+  /* Style the container */
+  .container {
+    border-radius: 5px;
+    background-color: #f8f0f0;
+    padding: 20px;
+  }
+  
+  /* Floating column for labels: 10% width */
+  .col-10 {
+    float: left;
+    width: 10%;
+    margin-top: 6px;
+  }
+  
+  /* Floating column for inputs: 25% width */
+  .col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+  }
+
+/* Floating column for inputs: 70% width */
+.col-70 {
+    float: left;
+    width: 70%;
+    margin-top: 6px;
+  }
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+  .form-inline {  
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+  
+  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .col-10, .col-25, input[type=submit] {
+      width: 100%;
+      margin-top: 0;
+    }
+  }
+  </style>
 </head>
 <body>
   <div class="container">
     <form action="action_page.php">
+
+<!--NAME-->
       <div class="row">
-        <div class="col-25">
+        <div class="col-10">
           <label for="fname">Name:</label><br>
         </div>
-        <div class="col-75">
+        <div class="col-25">
           <input type="text" id="fname" name="fname" value={{name}}><br>
         </div>
       </div>
+
+<!--PRN-->
       <div class="row">
-        <div class="col-25">
-          <label for="fname">Phone number:</label><br>
+        <div class="col-10">
+          <label for="fname">PRN:</label><br>
         </div>
-        <div class="col-75">
+        <div class="col-25">
+          <input type="text" id="fname" name="fname" placeholder="xxxx-xxxx-xx-xxxxxx"><br>
+        </div>
+      </div>
+
+<!--CONTACT-->
+      <div class="row">
+        <div class="col-10">
+          <label for="fname">Contact:</label><br>
+        </div>
+        <div class="col-25">
           <input type="text" id="fname" name="fname" value={{pno}}><br>
         </div>
       </div>
+
+<!--EMAIL-->
       <div class="row">
-        <div class="col-25">
+        <div class="col-10">
           <label for="lname">Email:</label><br>
         </div>
-        <div class="col-75">
+        <div class="col-25">
           <input type="text" id="lname" name="lname" value="{{email}}">
         </div>
       </div>
+
+<!--BRANCH-->
+      <div class="row">
+        <div class="col-10">
+          <label for="fname">Branch:</label><br>
+        </div>
+        <div class="col-25">
+          <input type="text" id="fname" name="fname" placeholder="CST/IT/ENC/EE/DS/CE"><br>
+        </div>
+      </div>
+
+<!--ADDRESS-->
+      <div class="row">
+        <div class="col-10">
+          <label for="fname">Address:</label><br>
+        </div>
+        <div class="col-25">
+          <input type="text" id="fname" name="fname" value="Mumbai, India"><br>
+        </div>
+      </div>
+
+<!--10TH DETAILS-->
       <div class="row">
         <div class="col-25">
-          <label for="lname">Education:</label><br>
-        </div>
-        <div class="col-75">
-          <input type="text" id="lname" name="lname" value="{{education}}">
+          <label for="lname"><b>10th Education Details:</b></label><br>
         </div>
       </div>
       <div class="row">
+        <div class="col-10 form-inline">
+          <label for="lname">Institute Name:</label><br>
+        </div>
+        <div class="col-25 form-inline">
+          <input type="text" id="lname" name="lname" value="{{education}}"> 
+        </div>
+
+        <div class="col-10">
+        </div>
+
+        <div class="col-10 form-inline">
+          <label for="lname">  Percentage:</label><br>
+        </div>
+        <div class="col-25 form-inline">
+          <input type="text" id="lname" name="lname" placeholder="Eg. 90%">
+        </div>
+      </div>
+
+
+<!--12TH DETAILS-->
+      <div class="row">
         <div class="col-25">
+          <label for="lname"><b>12th Education Details:</b></label><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-10 form-inline">
+          <label for="lname">Institute Name:</label><br>
+        </div>
+        <div class="col-25 form-inline">
+          <input type="text" id="lname" name="lname" value="{{education}}"> 
+        </div>
+
+        <div class="col-10">
+        </div>
+
+        <div class="col-10 form-inline">
+          <label for="lname">  Percentage:</label><br>
+        </div>
+        <div class="col-25 form-inline">
+          <input type="text" id="lname" name="lname" placeholder="Eg. 90%">
+        </div>
+      </div>
+
+<!--B.TECH DETAILS-->
+      <div class="row">
+        <div class="col-10">
+          <label for="lname"><b>B.Tech Details:</b></label><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-10 form-inline">
+          <label for="lname">Institute Name:</label><br>
+        </div>
+        <div class="col-25 form-inline">
+          <input type="text" id="lname" name="lname" value="Usha Mittal Institute of Technology"> 
+        </div>
+
+        <div class="col-10">
+        </div>
+
+        <div class="col-10 form-inline">
+          <label for="lname">  Percentage:</label><br>
+        </div>
+        <div class="col-25 form-inline">
+          <input type="text" id="lname" name="lname" placeholder="Eg. 90%">
+        </div>
+      </div>
+
+<!--SKILLS-->
+      <div class="row">
+        <div class="col-10">
           <label for="lname">Skills:</label><br>
         </div>
-        <div class="col-75">
+        <div class="col-70">
           <input type="text" id="lname" name="lname" value="{{skills}}">
         </div>
       </div>
+
+      <br>
+      <br>
       <div class="row">
-        <div class="col-25">
-          <label for="lname">Projects:</label><br>
+        <div class="submitb">
+          <input type="submit" value="Submit">
         </div>
-        <div class="col-75">
-          <input type="text" id="lname" name="lname" value="{{projects}}">
-        </div>
-      </div>
-      <div class="row">
-        <input type="submit" value="Submit">
       </div>
     </form> 
   </div>
